# OctaSine

./: Cargo.toml  README.md  TODO.md
bench_process/src/: main.rs
octasine/: Cargo.toml
octasine/benches/: process.rs
octasine/src/: common.rs  constants.rs  lib.rs  settings.rs
octasine/src/gui/: mod.rs
octasine/src/gui/egui/: mod.rs
octasine/src/gui/interface/: knob.rs  mod.rs  operator.rs
octasine/src/gui/interface/style/: dark.rs
octasine/src/parameters/: sync.rs  values.rs
octasine/src/parameters/processing/: mod.rs
octasine_vst2_plugin/: Cargo.toml
run_gui/: Cargo.toml
scripts/: run-gui.sh
scripts/general/: asm.sh  bench.sh
scripts/linux/: bench-with-coz.sh  setup-coz-on-ubuntu-focal.sh
