[package]
name = "octasine_vst2_plugin"
version = "0.5.3"
authors = ["Joakim Frostegård <joakim.frostegard@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"

[lib]
name = "octasine"
crate-type = ["cdylib"]

[features]
default = ["egui"]
simd = ["octasine/simd"]
glow = ["octasine/iced_gui_glow"]
wgpu = ["octasine/iced_gui_wgpu"]
egui = ["octasine/egui_gui"]

[dependencies]
octasine = { path = "../octasine", default-features = false }
vst = "0.2"
